# BRKCOL-3015

./: .env (sample)  .gitignore  Dockerfile  Pipfile  README.md  TO DO  docker-compose.yml  list_locations_direct.py  list_locations_sdk.py  list_locations_sdk_int_tokens.py  list_locations_sdk_service_app.py  pyproject.toml  requirements.txt  service_app.py
web_app/: .env (sample)  app.py
web_app/flask_app/: __init__.py  app_with_tokens.py  routes.py
web_app/flask_app/api/: __init__.py
web_app/flask_app/static/css/: login.css  nunito.css
web_app/flask_app/static/js/: datatables.js
web_app/flask_app/static/js/portal/: user_info.js  user_options.js  user_phones.js  user_queues.js
web_app/flask_app/templates/: body_js.html  footer.html  index.html  login.html  sidebar.html  topbar.html
web_app/flaskr/: __init__.py  app_with_tokens.py  routes.py
web_app/flaskr/static/css/: datatables.css  login.css
web_app/flaskr/static/js/portal/: user_info.js  user_options.js  user_phones.js  user_queues.js
web_app/flaskr/templates/: base.html  base_no_body.html  body_js.html  footer.html  index.html  login.html  sidebar.html  topbar.html
web_app/static/assets/: main.css
web_app/static/css/: scss-generated.css
web_app/static/js/: generated.js
