[project]
name = ""
version = "0.0.1"
requires-python = ">=3.11.0, <3.12"
dependencies = [
    "python-dotenv",
    "requests",
    "wxc-sdk",
    "authlib",
    "flask-session",
    "pyyaml",
    "flask[async]",
    "flask-restx>=1.3.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
